--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,57 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+
+  thanks: "Thank you for your order"
+
+  orders:
+    new:
+      legend: "Please Enter Your Details"
+    form:
+      name: "Name"
+      address_html: "Address"
+      email: "E-mail"
+      pay_type: "Pay with"
+      pay_prompt_html: "Select a payment method"
+      submit: "Place order"
+      pay_types:
+        check: "Check"
+        credit_card: "Credit card"
+        purchase_order: "Purchase Order"
+      check_pay_type:
+        routing_number: "Routing #"
+        account_number: "Account #"
+      credit_card_pay_type:
+        cc_number: "CC #"
+        expiration_date: "Expiry"
+      purchase_order_pay_type:
+        po_number: "PO #"
+
+  number:
+    currency:
+      format:
+        unit: "$"
+        precision: 2
+        separator: "."
+        delimiter: ","
+        format: "%u%n"
+
+  carts:
+    cart:
+      title: "Your Cart"
+      empty_cart: "Empty cart"
+      checkout: "Checkout"
+
+  store:
+    index:
+      title_html: "Your Pragmatic Catalog"
+      add_html: "Add to Cart"
+
+  layouts:
+    application:
+      title: "The Pragmatic Bookshelf"
+    navigation:
+      home: "Home"
+      questions: "Questions"
+      news: "News"
+      contact: "Contact"
